--- a/sources/services/iam/pom.xml
+++ b/sources/services/iam/pom.xml
@@ -38,6 +38,10 @@
             <artifactId>baas-basics-common-services</artifactId>
         </dependency>
         <dependency>
+            <groupId>group.idealworld.dew</groupId>
+            <artifactId>test-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
