Coding IAM service.

--- a/sources/services/gateway/pom.xml
+++ b/sources/services/gateway/pom.xml
@@ -53,10 +53,16 @@
             <groupId>group.idealworld.dew</groupId>
             <artifactId>baas-basics-common</artifactId>
             <version>${dew-baas.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-beanutils</groupId>
+                    <artifactId>commons-beanutils</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.swagger.core.v3</groupId>
+                    <artifactId>swagger-integration</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
