--- a/sources/services/iam/pom.xml
+++ b/sources/services/iam/pom.xml
@@ -22,13 +22,13 @@
 
     <parent>
         <groupId>group.idealworld.dew</groupId>
-        <artifactId>baas-sources-parent</artifactId>
+        <artifactId>baas-parent-spring</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../../../parents/spring/pom.xml</relativePath>
     </parent>
 
     <artifactId>baas-services-iam</artifactId>
-    <name>3.3.1 Dew BAAS Services IAM</name>
+    <name>4.1 Dew BAAS Services IAM</name>
     <packaging>jar</packaging>
     <version>1.0.0-SNAPSHOT</version>
 
