--- a/sources/basics/common-services/pom.xml
+++ b/sources/basics/common-services/pom.xml
@@ -22,15 +22,20 @@
 
     <parent>
         <groupId>group.idealworld.dew</groupId>
-        <artifactId>baas-sources-parent</artifactId>
+        <artifactId>baas-parent-spring</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../../../parents/spring/pom.xml</relativePath>
     </parent>
 
     <artifactId>baas-basics-common-services</artifactId>
-    <name>3.2.2 Dew BAAS Basics Common Services</name>
+    <name>3.1 Dew BAAS Basics Common Services</name>
     <packaging>jar</packaging>
     <version>1.0.0-SNAPSHOT</version>
+
+    <properties>
+        <maven.install.skip>true</maven.install.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -57,6 +62,11 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
