--- a/sources/services/gateway/pom.xml
+++ b/sources/services/gateway/pom.xml
@@ -22,45 +22,51 @@
 
     <parent>
         <groupId>group.idealworld.dew</groupId>
-        <artifactId>baas-sources-parent</artifactId>
+        <artifactId>baas-parent-vertx</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../../../parents/vertx/pom.xml</relativePath>
     </parent>
 
     <artifactId>baas-services-gateway</artifactId>
-    <name>3.3.0 Dew BAAS Services Gateway</name>
+    <name>4.0 Dew BAAS Services Gateway</name>
     <packaging>jar</packaging>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
+        <maven.install.skip>true</maven.install.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
         <main.verticle>idealworld.dew.baas.gateway.GatewayApplication</main.verticle>
+        <graalvm.version>20.2.0</graalvm.version>
     </properties>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>io.vertx</groupId>
-                <artifactId>vertx-stack-depchain</artifactId>
-                <version>${vertx.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <dependencies>
         <dependency>
             <groupId>group.idealworld.dew</groupId>
             <artifactId>baas-basics-common</artifactId>
-            <version>${dew-baas.version}</version>
             <exclusions>
+                <exclusion>
+                    <groupId>org.mindrot</groupId>
+                    <artifactId>jbcrypt</artifactId>
+                </exclusion>
                 <exclusion>
                     <groupId>commons-beanutils</groupId>
                     <artifactId>commons-beanutils</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>io.swagger.core.v3</groupId>
-                    <artifactId>swagger-integration</artifactId>
+                    <groupId>org.graalvm.sdk</groupId>
+                    <artifactId>graal-sdk</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.graalvm.truffle</groupId>
+                    <artifactId>truffle-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.graalvm.js</groupId>
+                    <artifactId>js</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.graalvm.js</groupId>
+                    <artifactId>js-scriptengine</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -71,16 +77,6 @@
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>io.vertx</groupId>
-                    <artifactId>vertx-auth-common</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>io.vertx</groupId>
-                    <artifactId>vertx-bridge-common</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
@@ -95,89 +91,62 @@
             <artifactId>snakeyaml</artifactId>
         </dependency>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-        </dependency>
-        <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-unit</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.github.kstyrc</groupId>
             <artifactId>embedded-redis</artifactId>
-            <version>${embedded-redis.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
-    <build>
+    <!--<build>
         <plugins>
             <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
-                <configuration>
-                    <release>11</release>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>${maven-shade-plugin.version}</version>
+                <groupId>org.graalvm.nativeimage</groupId>
+                <artifactId>native-image-maven-plugin</artifactId>
+                <version>${graalvm.version}</version>
                 <executions>
                     <execution>
-                        <phase>package</phase>
                         <goals>
-                            <goal>shade</goal>
+                            <goal>native-image</goal>
                         </goals>
-                        <configuration>
-                            <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <manifestEntries>
-                                        <Main-Class>io.vertx.core.Launcher</Main-Class>
-                                        <Main-Verticle>${main.verticle}</Main-Verticle>
-                                    </manifestEntries>
-                                </transformer>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                    <resource>META-INF/services/io.vertx.core.spi.VerticleFactory</resource>
-                                </transformer>
-                            </transformers>
-                            <artifactSet>
-                            </artifactSet>
-                            <outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar
-                            </outputFile>
-                        </configuration>
+                        <phase>package</phase>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>${exec-maven-plugin.version}</version>
                 <configuration>
-                    <mainClass>io.vertx.core.Launcher</mainClass>
-                    <arguments>
-                        <argument>run</argument>
-                        <argument>${main.verticle}</argument>
-                    </arguments>
+                    <mainClass>${main.verticle}</mainClass>
+                    <imageName>${project.name}</imageName>
+                    <buildArgs>
+                        -H:+ReportUnsupportedElementsAtRuntime
+                        &#45;&#45;allow-incomplete-classpath
+                        &#45;&#45;no-fallback
+                        &#45;&#45;enable-all-security-services
+                        &#45;&#45;initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslContext
+                        &#45;&#45;initialize-at-run-time=io.netty.handler.ssl.JdkNpnApplicationProtocolNegotiator
+                        &#45;&#45;initialize-at-run-time=io.netty.handler.ssl.ConscryptAlpnSslEngine
+                        &#45;&#45;initialize-at-run-time=io.netty.handler.ssl.JettyAlpnSslEngine$ServerEngine
+                        &#45;&#45;initialize-at-run-time=io.netty.handler.ssl.JettyAlpnSslEngine$ClientEngine
+                        &#45;&#45;initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslEngine
+                        &#45;&#45;initialize-at-run-time=io.netty.util.internal.logging.Log4JLogger
+                        &#45;&#45;initialize-at-build-time=org.slf4j.LoggerFactory
+                        &#45;&#45;initialize-at-build-time=org.slf4j.impl.StaticLoggerBinder
+                        &#45;&#45;initialize-at-run-time=io.netty.util.AbstractReferenceCounted,io.netty.util.concurrent.GlobalEventExecutor,io.netty.util.concurrent.ImmediateEventExecutor,io.netty.util.concurrent.ScheduledFutureTask,io.netty.util.internal.ThreadLocalRandom
+                        &#45;&#45;initialize-at-run-time=io.netty.util.NetUtilSubstitutions$NetUtilLocalhost4LazyHolder
+                        &#45;&#45;initialize-at-run-time=io.netty.util.NetUtilSubstitutions$NetUtilLocalhost6LazyHolder
+                        &#45;&#45;initialize-at-run-time=io.netty.util.NetUtilSubstitutions$NetUtilLocalhostLazyHolder
+                    </buildArgs>
                 </configuration>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 
 </project>
