Try to package a native image

--- a/sources/services/gateway/pom.xml
+++ b/sources/services/gateway/pom.xml
@@ -108,45 +108,42 @@
         </dependency>
     </dependencies>
 
-    <!--<build>
-        <plugins>
-            <plugin>
-                <groupId>org.graalvm.nativeimage</groupId>
-                <artifactId>native-image-maven-plugin</artifactId>
-                <version>${graalvm.version}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>native-image</goal>
-                        </goals>
-                        <phase>package</phase>
-                    </execution>
-                </executions>
-                <configuration>
-                    <mainClass>${main.verticle}</mainClass>
-                    <imageName>${project.name}</imageName>
-                    <buildArgs>
-                        -H:+ReportUnsupportedElementsAtRuntime
-                        &#45;&#45;allow-incomplete-classpath
-                        &#45;&#45;no-fallback
-                        &#45;&#45;enable-all-security-services
-                        &#45;&#45;initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslContext
-                        &#45;&#45;initialize-at-run-time=io.netty.handler.ssl.JdkNpnApplicationProtocolNegotiator
-                        &#45;&#45;initialize-at-run-time=io.netty.handler.ssl.ConscryptAlpnSslEngine
-                        &#45;&#45;initialize-at-run-time=io.netty.handler.ssl.JettyAlpnSslEngine$ServerEngine
-                        &#45;&#45;initialize-at-run-time=io.netty.handler.ssl.JettyAlpnSslEngine$ClientEngine
-                        &#45;&#45;initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslEngine
-                        &#45;&#45;initialize-at-run-time=io.netty.util.internal.logging.Log4JLogger
-                        &#45;&#45;initialize-at-build-time=org.slf4j.LoggerFactory
-                        &#45;&#45;initialize-at-build-time=org.slf4j.impl.StaticLoggerBinder
-                        &#45;&#45;initialize-at-run-time=io.netty.util.AbstractReferenceCounted,io.netty.util.concurrent.GlobalEventExecutor,io.netty.util.concurrent.ImmediateEventExecutor,io.netty.util.concurrent.ScheduledFutureTask,io.netty.util.internal.ThreadLocalRandom
-                        &#45;&#45;initialize-at-run-time=io.netty.util.NetUtilSubstitutions$NetUtilLocalhost4LazyHolder
-                        &#45;&#45;initialize-at-run-time=io.netty.util.NetUtilSubstitutions$NetUtilLocalhost6LazyHolder
-                        &#45;&#45;initialize-at-run-time=io.netty.util.NetUtilSubstitutions$NetUtilLocalhostLazyHolder
-                    </buildArgs>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>-->
+    <profiles>
+        <profile>
+            <id>native</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>
+                                -agentlib:native-image-agent=access-filter-file=${project.basedir}/src/main/resources/META-INF/native-image/group.idealworld.dew/baas-services-gateway/agent-access-filter.json,config-output-dir=${project.basedir}/src/main/resources/META-INF/native-image/group.idealworld.dew/baas-services-gateway/
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.graalvm.nativeimage</groupId>
+                        <artifactId>native-image-maven-plugin</artifactId>
+                        <version>${graalvm.version}</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>native-image</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <skip>false</skip>
+                            <mainClass>${main.verticle}</mainClass>
+                            <imageName>${project.name}</imageName>
+                            <buildArgs>
+                            </buildArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
