--- a/parents/vertx/pom.xml
+++ b/parents/vertx/pom.xml
@@ -76,6 +76,11 @@
           </dependency>
           <dependency>
               <groupId>io.vertx</groupId>
+              <artifactId>vertx-mysql-client</artifactId>
+              <version>${vertx.version}</version>
+          </dependency>
+          <dependency>
+              <groupId>io.vertx</groupId>
               <artifactId>vertx-micrometer-metrics</artifactId>
               <version>${vertx.version}</version>
           </dependency>
