--- a/sources/services/ds-db-reldb/pom.xml
+++ b/sources/services/ds-db-reldb/pom.xml
@@ -36,12 +36,19 @@
         <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
         <main.verticle>idealworld.dew.baas.reldb.RelDBApplication</main.verticle>
+
+        <druid.version>1.2.3</druid.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>group.idealworld.dew</groupId>
             <artifactId>baas-basics-vertx-services</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
