--- a/sources/services/ds-db-reldb/pom.xml
+++ b/sources/services/ds-db-reldb/pom.xml
@@ -52,6 +52,10 @@
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
+            <artifactId>vertx-web-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
             <artifactId>vertx-mysql-client</artifactId>
         </dependency>
         <dependency>
