Preliminary completion of cache module & Upgrade to junit5

--- a/parents/vertx/pom.xml
+++ b/parents/vertx/pom.xml
@@ -40,74 +40,80 @@
         <main.verticle></main.verticle>
     </properties>
 
-  <dependencyManagement>
-      <dependencies>
-          <dependency>
-              <groupId>group.idealworld.dew</groupId>
-              <artifactId>baas-basics-vertx-services</artifactId>
-              <version>${dew-baas.version}</version>
-          </dependency>
-          <dependency>
-              <groupId>io.vertx</groupId>
-              <artifactId>vertx-stack-depchain</artifactId>
-              <version>${vertx.version}</version>
-              <type>pom</type>
-              <scope>import</scope>
-          </dependency>
-          <dependency>
-              <groupId>io.vertx</groupId>
-              <artifactId>vertx-web-client</artifactId>
-              <version>${vertx.version}</version>
-          </dependency>
-          <dependency>
-              <groupId>io.vertx</groupId>
-              <artifactId>vertx-web</artifactId>
-              <version>${vertx.version}</version>
-              <exclusions>
-                  <exclusion>
-                      <groupId>io.vertx</groupId>
-                      <artifactId>vertx-auth-common</artifactId>
-                  </exclusion>
-                  <exclusion>
-                      <groupId>io.vertx</groupId>
-                      <artifactId>vertx-bridge-common</artifactId>
-                  </exclusion>
-              </exclusions>
-          </dependency>
-          <dependency>
-              <groupId>io.vertx</groupId>
-              <artifactId>vertx-mysql-client</artifactId>
-              <version>${vertx.version}</version>
-          </dependency>
-          <dependency>
-              <groupId>io.vertx</groupId>
-              <artifactId>vertx-micrometer-metrics</artifactId>
-              <version>${vertx.version}</version>
-          </dependency>
-          <dependency>
-              <groupId>io.vertx</groupId>
-              <artifactId>vertx-redis-client</artifactId>
-              <version>${vertx.version}</version>
-          </dependency>
-          <dependency>
-              <groupId>org.yaml</groupId>
-              <artifactId>snakeyaml</artifactId>
-              <version>${snakeyaml.version}</version>
-          </dependency>
-          <dependency>
-              <groupId>io.vertx</groupId>
-              <artifactId>vertx-unit</artifactId>
-              <scope>test</scope>
-              <version>${vertx.version}</version>
-          </dependency>
-          <dependency>
-              <groupId>com.github.kstyrc</groupId>
-              <artifactId>embedded-redis</artifactId>
-              <version>${embedded-redis.version}</version>
-              <scope>test</scope>
-          </dependency>
-      </dependencies>
-  </dependencyManagement>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>group.idealworld.dew</groupId>
+                <artifactId>baas-basics-vertx-services</artifactId>
+                <version>${dew-baas.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-stack-depchain</artifactId>
+                <version>${vertx.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-web</artifactId>
+                <version>${vertx.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>io.vertx</groupId>
+                        <artifactId>vertx-auth-common</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>io.vertx</groupId>
+                        <artifactId>vertx-bridge-common</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-web-client</artifactId>
+                <version>${vertx.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>io.vertx</groupId>
+                        <artifactId>vertx-auth-common</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-mysql-client</artifactId>
+                <version>${vertx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-micrometer-metrics</artifactId>
+                <version>${vertx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-redis-client</artifactId>
+                <version>${vertx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>${snakeyaml.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-junit5</artifactId>
+                <scope>test</scope>
+                <version>${vertx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.kstyrc</groupId>
+                <artifactId>embedded-redis</artifactId>
+                <version>${embedded-redis.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
