--- a/sources/basics/vertx-services/pom.xml
+++ b/sources/basics/vertx-services/pom.xml
@@ -98,11 +98,7 @@
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
-            <artifactId>vertx-unit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <artifactId>vertx-junit5</artifactId>
         </dependency>
         <dependency>
             <groupId>com.github.kstyrc</groupId>
