--- a/sources/services/gateway/pom.xml
+++ b/sources/services/gateway/pom.xml
@@ -49,11 +49,7 @@
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
-            <artifactId>vertx-unit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <artifactId>vertx-junit5</artifactId>
         </dependency>
         <dependency>
             <groupId>com.github.kstyrc</groupId>
