Coding iam module unit tests

--- a/sources/services/iam/src/main/resources/application.yml
+++ b/sources/services/iam/src/main/resources/application.yml
@@ -15,13 +15,7 @@ dew:
     format:
       auto-trim-from-req: true
   security:
-    router:
-      enabled: true
-      roleAuth:
-        0-0-SYSTEM_ADMIN:
-          all: ["/admin/**"]
-        0-0-TENANT_ADMIN:
-          all: ["/console/**"]
+    authEnabled: false
 
 
 
