--- a/sources/services/iam/src/test/resources/application-test.yml
+++ b/sources/services/iam/src/test/resources/application-test.yml
@@ -4,17 +4,18 @@ spring:
     port: 6379
     database: 0
   datasource:
-#    driver-class-name: org.h2.Driver
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:iam;
 #    url: jdbc:h2:./iam.db;AUTO_SERVER=TRUE
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/iam?useUnicode=true&characterEncoding=utf-8&rewriteBatchedStatements=true
-    username: root
-    password: 123456
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://127.0.0.1:3306/iam?useUnicode=true&characterEncoding=utf-8&rewriteBatchedStatements=true
+#    username: root
+#    password: 123456
 dew:
   basic:
-    name: web示例
+    name: Dew BaaS Test
     version: 1.0
-    desc: 这是一个Web示例
+    desc: Dew BaaS 测试
     web-site: http://www.idealworld.group
     doc:
       base-package: idealworld.dew.baas.iam.scene.common.controller
@@ -26,5 +27,5 @@ logging:
   level:
     idealworld: trace
     org.hibernate.SQL: debug
-    org.hibernate.type.descriptor.sql: trace
+    org.hibernate.type.descriptor.sql: debug
 
