--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,8 @@
         <module>sources/services/iam</module>
         <module>sources/services/ds-db-reldb</module>
         <module>sources/services/ds-cache</module>
+        <module>sources/terminals/sdk</module>
+
     </modules>
 
     <repositories>
