--- a/sources/terminals/plugin/packages/kernel/package.json
+++ b/sources/terminals/plugin/packages/kernel/package.json
@@ -17,7 +17,8 @@
     "acorn": "^8.0.4",
     "axios": "^0.20.0",
     "moment": "^2.29.0",
-    "node-rsa": "^1.1.1"
+    "node-rsa": "^1.1.1",
+    "node-sql-parser": "^3.1.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.12",
