--- a/sources/terminals/cli/package.json
+++ b/sources/terminals/cli/package.json
@@ -12,8 +12,13 @@
     "@types/crypto-js": "^4.0.1",
     "@types/inquirer": "^7.3.1",
     "axios": "^0.20.0",
+    "chalk": "^4.1.0",
+    "clear": "^0.1.0",
+    "clui": "^0.3.6",
     "crypto-js": "^4.0.0",
-    "inquirer": "^7.3.3"
+    "figlet": "^1.5.0",
+    "inquirer": "^7.3.3",
+    "simple-git": "^2.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.7",
@@ -33,6 +38,6 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "bin": {
-    "dewcli": "./index.js"
+    "dewcli": "./main/Index.js"
   }
 }
