Adjustment of terminal project structure.

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <module>sources/services/iam</module>
         <module>sources/services/ds-db-reldb</module>
         <module>sources/services/ds-cache</module>
-        <module>sources/terminals/sdk</module>
+        <module>sources/terminals</module>
 
     </modules>
 
