--- a/parents/spring/pom.xml
+++ b/parents/spring/pom.xml
@@ -34,6 +34,8 @@
     <properties>
         <dew-serviceless.version>1.0.0-SNAPSHOT</dew-serviceless.version>
         <checkstyle.config.path>./checkstyle.xml</checkstyle.config.path>
+        <maven.install.skip>false</maven.install.skip>
+        <maven.deploy.skip>false</maven.deploy.skip>
     </properties>
 
     <developers>
@@ -121,6 +123,32 @@
                 <configuration>
                     <argLine>--add-opens java.net.http/jdk.internal.net.http.common=ALL-UNNAMED</argLine>
                 </configuration>
+            </plugin>
+            <!-- TODO HTTP请求下无法获取覆盖率 -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.6</version>
+                <configuration>
+                    <includes>
+                        <include>idealworld/**/*</include>
+                    </includes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>pre-test</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report-aggregate</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report-aggregate</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
