--- a/sources/services/iam/pom.xml
+++ b/sources/services/iam/pom.xml
@@ -32,6 +32,11 @@
     <packaging>jar</packaging>
     <version>1.0.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.install.skip>true</maven.install.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>group.idealworld.dew</groupId>
