--- a/sources/services/ds-cache/src/test/resources/application-test.yml
+++ b/sources/services/ds-cache/src/test/resources/application-test.yml
@@ -1,4 +1,10 @@
+httpServer:
+  port: 8082
 redis:
   uri: redis://localhost:6379
+iam:
+  uri: http://127.0.0.1:8081
+  appId: 1
+  tenantId: 1
 security:
   sqlCacheExpireSec: 0
