--- a/sources/terminals/packages/sdk/package.json
+++ b/sources/terminals/packages/sdk/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.20.0"
   },
   "devDependencies": {
+    "@dew/plugin-kernel": "^1.0.0",
     "@types/jest": "^26.0.12",
     "@types/node": "^14.6.2",
     "jest": "^26.4.2",
