--- a/sources/terminals/pom.xml
+++ b/sources/terminals/pom.xml
@@ -24,7 +24,7 @@
         <groupId>group.idealworld.dew</groupId>
         <artifactId>serviceless-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../../../parents/basic/pom.xml</relativePath>
+        <relativePath>../../parents/basic/pom.xml</relativePath>
     </parent>
 
     <artifactId>serviceless-terminal</artifactId>
