--- a/module/iam/pom.xml
+++ b/module/iam/pom.xml
@@ -50,6 +50,10 @@
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
+            <artifactId>vertx-web-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
             <artifactId>vertx-sql-client-templates</artifactId>
         </dependency>
         <dependency>
