Start refactoring to use vertx as the technology stack in a unified way.

--- a/module/iam/src/test/resources/application-test.yml
+++ b/module/iam/src/test/resources/application-test.yml
@@ -8,6 +8,8 @@ funs:
     userName:
     password:
 modules:
-  -
-    clazzPackage: idealworld.dew.serviceless.iam.IAMModule
+  - clazzPackage: idealworld.dew.serviceless.iam.IAMModule
     config:
+      allowTenantRegister: true
+      app:
+        iamAdminPwd: TestPwd1d
