Start refactoring to use vertx as the technology stack in a unified way.

--- a/module/gateway/src/test/resources/application-test.yml
+++ b/module/gateway/src/test/resources/application-test.yml
@@ -3,7 +3,7 @@ funs:
     uri: redis://localhost:6379
 modules:
   -
-    clazzPackage: idealworld.dew.serviceless.gateway.DewGatewayModule
+    clazzPackage: idealworld.dew.serviceless.gateway.GatewayModule
     config:
       security:
         tokenCacheExpireSec: 0
