Start refactoring to use vertx as the technology stack in a unified way.

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
         <module>module/ds-db-reldb</module>
         <module>module/ds-cache</module>
         <module>module/ds-http</module>
+        <module>module/trigger</module>
         <module>service/aggregation</module>
         <!--<module>docs</module>-->
         <module>terminals</module>
